welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: ')' expected but ',' found.
	if (weekday==false, vacation==true)
                          ^sleepIn:7: error: illegal start of simple expression
} 
^